# openai-rs

./: Cargo.toml
src/: main.rs
src/api/: chat.rs  chat_req.rs  chat_res.rs  mod.rs  store.rs
