[package]
name = "openai-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# Serde_json is just for the example, not required in general
serde_json = "1.0"

# For requests + async
reqwest = {version = "0.11", features = ["blocking", "json"]}
tokio = { version = "1", features = ["full"] }

# To render markdown in the terminal
termimad = "0.20"

# To get nice coloring in the command line.
colored =  "2.0.0"